[gd_scene load_steps=2 format=3 uid="uid://b1yx5gajxc8lk"]

[ext_resource type="Script" uid="uid://ik772bpcj7xi" path="res://history_screen.gd" id="1_myj6d"]

[node name="HistoryScreen" type="Node2D"]
script = ExtResource("1_myj6d")

[node name="BackButton" type="Button" parent="."]
offset_left = 7.0
offset_top = 5.0
offset_right = 120.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 25
text = "Go Back"

[node name="PrevPage" type="Button" parent="."]
offset_left = 10.0
offset_top = 548.0
offset_right = 137.0
offset_bottom = 596.0
theme_override_font_sizes/font_size = 25
text = "Prev Page"

[node name="NextPage" type="Button" parent="."]
offset_left = 263.0
offset_top = 548.0
offset_right = 394.0
offset_bottom = 593.0
theme_override_font_sizes/font_size = 25
text = "Next Page"

[node name="PageLabel" type="RichTextLabel" parent="."]
offset_left = 149.0
offset_top = 558.0
offset_right = 277.0
offset_bottom = 593.0
theme_override_font_sizes/normal_font_size = 20
text = "Page 1 of 1"

[node name="NoWeatherHistoryLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 13.0
offset_top = 238.0
offset_right = 409.0
offset_bottom = 370.0
theme_override_font_sizes/normal_font_size = 25
text = "No Emotional Weather History for Today yet! Try recording some of your thoughts first :)
"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PrevPage" to="." method="_on_prev_page_pressed"]
[connection signal="pressed" from="NextPage" to="." method="_on_next_page_pressed"]
